--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -4,3 +4,18 @@ html {
   font-family: $base-font-family;
   font-size: $base-font-size;
 }
+body {
+  margin: 0;
+}
+.contact-form {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  &-container {
+    text-align: center;
+    form {
+      width: 100%;
+    }
+  }
+}
